fixed some bleeding and added desktop switch function

--- a/style.css
+++ b/style.css
@@ -771,7 +771,7 @@ div.player_box.tablet_player_box {
 }
 @media only screen and (min-width: 1820px) and (min-height: 950px){
     .player_box{
-        width:60%;
+        width:56%;
     }
 }
 @media only screen and (min-width: 2000px) {
